update post arg
