# dashdotdb/controllers/serviceslometrics.py
@@ -1,12 +1,12 @@
 from dashdotdb.services.serviceslometrics import ServiceSLOMetrics
 
 
-def post(cluster, body):
-    imv = ServiceSLOMetrics(cluster=cluster)
-    imv.insert(slo=body)
+def post(name, body):
+    slo = ServiceSLOMetrics(name=name)
+    slo.insert(slo=body)
     return 'ok'
 
 
 def search(cluster, namespace, sli_type, name):
-    imv = ServiceSLOMetrics(cluster, namespace, sli_type, name)
-    return imv.get_slometrics()
+    slo = ServiceSLOMetrics(cluster, namespace, sli_type, name)
+    return slo.get_slometrics()
